[package]
name = "tracing-span-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"

[dev-dependencies]
futures = "0.3.27"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
